--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet" />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <link rel="icon" href="img/logo.jpg" />
     <title>Iqbal Maulana | Personal Website</title>
