--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                     <div class="timeline-content">
                       <h5 class="title">Pariti Indonesia</h5>
                       <p class="description text-start">
-                        PARITI INDONESIA is a company engaged in Information Technology which has services including in the procurement of IT equipment, manufacture and development of information applications / systems.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores suscipit rerum temporibus. Quaerat fugit minima voluptas, eum, reprehenderit veritatis magnam asperiores voluptate totam consequatur ab soluta! Sed est
+                        omnis in, nemo possimus eaque excepturi autem quo magni, a mollitia placeat optio iure exercitationem ullam tempore!
                       </p>
                     </div>
                   </div>
@@ -105,9 +106,8 @@
                     <div class="timeline-content">
                       <h5 class="title">Notaris</h5>
                       <p class="description">
-                        A notary is a Public Official who has the authority to make Authentic Deeds regarding all actions, agreements, and provisions required by laws and regulations and/or those interested in being stated in an authentic
-                        deed guarantees the certainty of the date of making the deed, keeps the deed, provides Grosse, copies, and excerpts of deeds, all of which as long as the making of the deeds is not assigned or excluded to other
-                        officials or other persons stipulated by law.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis totam ullam facere, beatae quos magnam amet dolorum qui asperiores, ut maiores animi in odio fuga dolore ex repudiandae pariatur minus natus libero. Vel
+                        consequuntur inventore nostrum ut, rerum eligendi nihil!
                       </p>
                     </div>
                   </div>
