--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Iqbal Maulana | Personal Website</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <!-- Favicons -->
-    <link href="assets/img/logo.jpg" rel="icon" />
+  <title>Iqbal Maulana | Personal Website</title>
+<meta content="" name="description" />
+	<meta content="" name="keywords" />
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
+	<!-- Favicons -->
+	<link href="assets/img/logo.jpg" rel="icon" />
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-    <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-    <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-    <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-    <link href="../assets/css/style.css" rel="stylesheet" />
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <!-- =======================================================
-  * Template Name: OnePage - v4.1.0
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+<link href="assets/css/timeline.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: OnePage - v4.9.2
   * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  </head>
+</head>
 
-  <body>
-    <!-- ======= Header ======= -->
+<body>
+
+  <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center justify-content-between">
         <h1 class="logo"><a href="index.html">Iqbal Maulana</a></h1>
@@ -43,83 +47,91 @@
         <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
         <!-- .navbar -->
       </div>
-    </header>
-    <!-- End Header -->
+  </header><!-- End Header -->
 
-    <main id="main">
+  <main id="main">
       <!-- ======= Breadcrumbs ======= -->
       <section id="hero" class="d-flex align-items-center">
         <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-9 text-center">
               <h1>Iqbal Maulana</h1>
-              <p class="lead">Hi, Welcome to my personal website.<br />I'm 25 years old and i'm a web developer based in Jakarta, Indonesia</p>
+              <p class="lead">Hi, Welcome to my personal website.<br />I'm 25 years old and i'm a web developer based in Tangerang, Indonesia</p>
             </div>
           </div>
         </div>
       </section>
       <!-- End Breadcrumbs -->
 
-      <section id="education">
-        <div class="container" data-aos="fade-up" data-aos-delay="100">
-          <div class="row">
-            <div class="col text-center">
-              <h2>Work Experience</h2>
-            </div>
-          </div>
-          <div class="row justify-content-center fs-5 text-center">
-            <div class="col mb-2">
-              <div class="container">
-                <div class="main-timeline">
-                  <!-- start experience section-->
-                  <div class="timeline">
-                    <div class="icon"></div>
-                    <div class="date-content">
-                      <div class="date-outer">
-                        <span class="date">
-                          <span class="month">July 2020 -</span>
-                          <span class="year">Present</span>
-                        </span>
-                      </div>
-                    </div>
-                    <div class="timeline-content">
-                      <h5 class="title">Pariti Indonesia</h5>
-                      <p class="description text-start">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores suscipit rerum temporibus. Quaerat fugit minima voluptas, eum, reprehenderit veritatis magnam asperiores voluptate totam consequatur ab soluta! Sed est
-                        omnis in, nemo possimus eaque excepturi autem quo magni, a mollitia placeat optio iure exercitationem ullam tempore!
-                      </p>
-                    </div>
-                  </div>
-                  <!-- end experience section-->
+      <section id="Experience">
+        <div class="container">
+<div class="main-timeline">
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                            <span class="month">July 2020 -</span>
+                                    <span class="year">Present</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h3 class="title">Pariti Indonesia</h3>
+								<h5>Junior Web Developer</h5>
+                                <table class="table" style="width:100%">
+								  <tr>
+									<td>Developing Web Base Application with PHP, MySql, CodeIgniter</td>
+								  </tr>
+								  <tr>
+									<td>Design Website User Interface</td>
+								  </tr>
+								  <tr>
+									<td>Create Illustration and Motion Graphic</td>
+								  </tr>
+								</table>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
 
-                  <!-- start experience section-->
-                  <div class="timeline">
-                    <div class="icon"></div>
-                    <div class="date-content">
-                      <div class="date-outer">
-                        <span class="date">
-                          <span class="month">June 2016</span>
-                          <span class="year">Dec 2019</span>
-                        </span>
-                      </div>
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                            <span class="month">July 2020 -</span>
+                                    <span class="year">Present</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h3 class="title">Pariti Indonesia</h3>
+								<h5>Application Trainer & IT Support</h5>
+                                <table class="table" style="width:100%">
+								  <tr>
+									<td>Responsible for product introduction, product installation, training, service questions or complaints, problem-solving, and administration</td>
+								  </tr>
+								  <tr>
+									<td>Create Motion Graphic and simple animation video with Adobe Premiere Pro</td>
+								  </tr>
+								  <tr>
+									<td>Process product reviews and inform the development team of defects and errors</td>
+								  </tr>
+								<tr>
+									<td>Ensure that the final product satisfies the product requirements and meet end-user expectations</td>
+								  </tr>
+								</table>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+
                     </div>
-                    <div class="timeline-content">
-                      <h5 class="title">Notaris</h5>
-                      <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis totam ullam facere, beatae quos magnam amet dolorum qui asperiores, ut maiores animi in odio fuga dolore ex repudiandae pariatur minus natus libero. Vel
-                        consequuntur inventore nostrum ut, rerum eligendi nihil!
-                      </p>
-                    </div>
-                  </div>
-                  <!-- end experience section-->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+</div>
       </section>
 
-      <section id="about" class="about section-bg">
+     <!-- <section id="about" class="about section-bg">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="tab-pane active" role="tabpanel">
             <div class="row">
@@ -141,7 +153,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section id="clients" class="clients section-bg">
         <div class="container">
@@ -188,13 +200,17 @@
             <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
               <img src="assets/img/clients/10.png" class="img-fluid" alt="" />
             </div>
+
+			<div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+              <img src="assets/img/clients/11.png" class="img-fluid" alt="" />
+            </div>
           </div>
         </div>
       </section>
     </main>
     <!-- End #main -->
 
-    <!-- ======= Footer ======= -->
+  <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="footer-top" data-aos="fade-up">
         <div class="container">
@@ -232,19 +248,21 @@
     </footer>
     <!-- End Footer -->
 
-    <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-    <!-- Vendor JS Files -->
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script>
-    <script src="../assets/vendor/purecounter/purecounter.js"></script>
-    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
-    <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
-  </body>
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
