--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-9 text-center">
               <h1>Iqbal Maulana</h1>
-              <p class="lead">Hi, Welcome to my personal website.<br />I'm 25 years old and i'm a web developer based in Tangerang, Indonesia</p>
+              <p class="lead">I'm a dynamic, creative software engineer always open to learning. My education gave me strong analytical, problem-solving, resource management, and communication skills. I'm skilled in Codeigniter app development and eager to learn more programming languages, frameworks, and principles.</p>
             </div>
           </div>
         </div>
