--- a/dev/waktu-sholat2/index.html
+++ b/dev/waktu-sholat2/index.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Jadwal Sholat</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Jadwal Sholat Hari Ini</h1>
-  <table>
-    <tr>
-      <th>Waktu</th>
-      <th>Waktu Sholat</th>
-    </tr>
-    <tr>
-      <td>Fajr</td>
-      <td id="fajr"></td>
-    </tr>
-    <tr>
-      <td>Dhuhr</td>
-      <td id="dhuhr"></td>
-    </tr>
-    <tr>
-      <td>Asr</td>
-      <td id="asr"></td>
-    </tr>
-    <tr>
-      <td>Maghrib</td>
-      <td id="maghrib"></td>
-    </tr>
-    <tr>
-      <td>Isha</td>
-      <td id="isha"></td>
-    </tr>
-  </table>
-  <script src="script.js"></script>
-</body>
+<html>
+  <head>
+    <title>Jadwal Sholat</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Jadwal Sholat Hari Ini</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>Waktu</th>
+            <th>Jam</th>
+          </tr>
+        </thead>
+        <tbody id="jadwal-sholat">
+        </tbody>
+      </table>
+    </div>
+
+    <script>
+      $(document).ready(function() {
+        // Mengambil lokasi pengguna dengan API Geolocation
+        navigator.geolocation.getCurrentPosition(function(position) {
+          var latitude = position.coords.latitude;
+          var longitude = position.coords.longitude;
+
+          // Memanggil API Aladhan untuk mengambil jadwal sholat
+          $.ajax({
+            url: 'https://api.aladhan.com/v1/timings?latitude=' + latitude + '&longitude=' + longitude + '&method=8',
+            method: 'GET',
+            success: function(data) {
+              var jadwalSholat = data.data.timings;
+              var rows = '';
+              for (var waktu in jadwalSholat) {
+                rows += '<tr><td>' + waktu + '</td><td>' + jadwalSholat[waktu] + '</td></tr>';
+              }
+              $('#jadwal-sholat').html(rows);
+            }
+          });
+        });
+      });
+    </script>
+  </body>
 </html>
