--- a/dev/waktu-sholat2/index.html
+++ b/dev/waktu-sholat2/index.html
@@ -43,7 +43,7 @@
                   jadwalSholat['Isha'] = jadwalSholat2['Isha'];
 
                   // Membuat array untuk menentukan urutan waktu sholat
-                  var waktuSholat = ['Imsak', 'Fajr', 'Sunrise', 'Dhuhr', 'Asr', 'Sunset', 'Maghrib', 'Isha', 'Midnight', 'Firstthird', 'Lastthird'];
+                  var waktuSholat = ['Imsak', 'Fajr', 'Sunrise', 'Dhuhr', 'Asr', 'Sunset', 'Maghrib', 'Isha', 'Midnight'];
 
                   var rows = '';
                   for (var i = 0; i < waktuSholat.length; i++) {
