--- a/dev/waktu-sholat/index.html
+++ b/dev/waktu-sholat/index.html
@@ -10,6 +10,7 @@
     <div class="container">
       <h1>Jadwal Sholat Hari Ini</h1>
       <h3 id="waktu"></h3>
+      <h3 id="nama-kota"></h3>
       <table>
         <thead>
           <tr>
