--- a/dev/tictactoe/index.html
+++ b/dev/tictactoe/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Game Tic-Tac-Toe</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Game Tic-Tac-Toe</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+	</head>
 <body>
 	<div class="container">
 		<h1>Game Tic-Tac-Toe</h1>
-		<table>
+		<table class="table table-bordered">
 			<tr>
 				<td id="1"></td>
 				<td id="2"></td>
@@ -31,3 +34,4 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
