--- a/index.html
+++ b/index.html
@@ -201,8 +201,12 @@
               <img src="assets/img/clients/10.png" class="img-fluid" alt="" />
             </div>
 
-			<div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+			      <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
               <img src="assets/img/clients/11.png" class="img-fluid" alt="" />
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+              <img src="assets/img/clients/12.png" class="img-fluid" alt="" />
             </div>
           </div>
         </div>
