--- a/dev/udangan-nikah-iqbal-fauziah/index.html
+++ b/dev/udangan-nikah-iqbal-fauziah/index.html
@@ -358,75 +358,9 @@
         <h1 class="title5 text-[50px] text-center mt-[-5px]" style="font-family: 'Passions Conflict', cursive;">GuestBooks</h1>
 
         <div class="book m-auto bg-white w-[95%] sm:w-[75%] md:w-[70%] lg:w-[50%] xl:w-[47%] h-[58%] rounded-2xl border-[1.5px] border-red-400 overflow-auto">
-            <div class="flex ml-[30px] mt-[40px]">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">SM</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Shinta Maharani <br><p class="text-[11px]">02 December 2022 16:00</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Mibujuh Na 🌹</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">UB</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Ujang Bungsu <br><p class="text-[11px]">01 December 2022 13:00</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Selamat menua bersama 💐</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">KC</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Keluarga Cemara <br><p class="text-[11px]">05 November 2022 11:00</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Barakallah semoga lancar sampai hari H dan menjadi kelyarga yg SaMaWa.. 🤲</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">IS</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Ilham Samsudin <br><p class="text-[11px]">09 November 2022 16:00</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Happy wedding 🎉</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">SH</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Saudara Hansen <br><p class="text-[11px]">10 November 2022 09:00</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Selamat atas pernikahannya..</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">IR</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Idgitaf Ramadhan <br><p class="text-[11px]">10 November 2022 11:00</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">asdads</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">IR</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Idgitaf Ramadhan <br><p class="text-[11px]">10 November 2022 11:01</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Selamat ya 👏</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">KK</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Keluarga Kridzi & Co <br><p class="text-[11px]">09 November 2022 11:01</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Selamat ya atas pernikahannya, sakinah mawaddah warohmah. 🎉🎂🙏</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">RSJ</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Rehan Syulit Jir (RSJ)<br><p class="text-[11px]">05 October 2022 17:00</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Begitu Syulit lupakan rehan, apalagi rehan baik....</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
-
-            <div class="flex ml-[30px] mt-4">
-                <div class="profile bg-[#ff7070] w-[50px] h-[50px] text-white flex items-center justify-center rounded-full text-[25px]">HM</div>
-                <h4 class="ml-[15px] mt-[-2px] text-gray-600 font-semibold">Iqbal Maulana <br><p class="text-[11px]">05 October 2022 16:00</p></h4>
-            </div>
-            <p class="px-10 m-auto pt-5 text-[14px] md:text-[15px] lg:text-[16px]">Titip Salam Buat Bang Galih, jangan lupa titik koma💻</p>
-            <hr class="m-auto mt-4 border-[#ff7070] w-[95%]">
+            <div class="commentbox"></div>
+            <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+            <script>commentBox('5753806784561152-proj')</script>
         </div>
     </section>
 
