--- a/dev/udangan-nikah-iqbal-fauziah/index.html
+++ b/dev/udangan-nikah-iqbal-fauziah/index.html
@@ -29,8 +29,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body class="bg-red-50 overflow-x-hidden" style="font-family: 'Open Sans', sans-serif; max-width: 1000px; margin: auto;">
-
+<body class="bg-red-50 overflow-x-hidden" style="font-family: 'Open Sans', sans-serif; max-width: 1000px;">
     
 
     <div id="cover" style="background:url(img/bg/wedding1.jpg) center center no-repeat; background-size: cover;" class="kosong z-30 fixed top-0 bottom-0 left-0 right-0 w-full h-screen py-28 px-2">
