--- a/dev/udangan-nikah-iqbal-fauziah/index.html
+++ b/dev/udangan-nikah-iqbal-fauziah/index.html
@@ -48,7 +48,7 @@
     
     <!-- NAVABAR -->
     
-    <nav class="nav fixed bottom-0 w-full px-[6px] h-[70px] bg-white flex justify-center z-20" style="max-width: 1000px; margin: auto;">
+    <nav class="nav fixed bottom-0 w-full px-[6px] h-[70px] bg-white flex justify-center z-20" style="max-width: 1000px;">
         <ul class="flex">
             <li class="rumah m-auto">
                 <a href="#home" class="grid">
