--- a/dev/udangan-nikah-iqbal-fauziah/index.html
+++ b/dev/udangan-nikah-iqbal-fauziah/index.html
@@ -254,12 +254,12 @@
             </div>
 
             <div class="gallery w-[80%] mt-[100px] m-auto mb-[50px] mt-5 grid md:grid-cols-2 lg:grid-cols-2 gap-[13px]">
-                <img src="img/gallery/img1.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer h-[300px] block" onclick="openFullImg(this.src)" id="img1">
-                <img src="img/gallery/img2.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer h-[300px] block" onclick="openFullImg(this.src)" id="img2">
-                <img src="img/gallery/img3.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer h-[300px] block" onclick="openFullImg(this.src)" id="img3">
-                <img src="img/gallery/img4.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer h-[300px] block" onclick="openFullImg(this.src)" id="img4">
-                <img src="img/gallery/img5.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer h-[300px] block" onclick="openFullImg(this.src)" id="img5">
-                <img src="img/gallery/img6.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer h-[300px] block" onclick="openFullImg(this.src)" id="img6">
+                <img src="img/gallery/img1.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer  block" onclick="openFullImg(this.src)" id="img1">
+                <img src="img/gallery/img2.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer  block" onclick="openFullImg(this.src)" id="img2">
+                <img src="img/gallery/img3.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer  block" onclick="openFullImg(this.src)" id="img3">
+                <img src="img/gallery/img4.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer  block" onclick="openFullImg(this.src)" id="img4">
+                <img src="img/gallery/img5.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer  block" onclick="openFullImg(this.src)" id="img5">
+                <img src="img/gallery/img6.jpg" alt="" class="w-[100%] rounded-[5px] cursor-pointer  block" onclick="openFullImg(this.src)" id="img6">
             </div>
         </div>
         
