--- a/dev/udangan-nikah-iqbal-fauziah/index.html
+++ b/dev/udangan-nikah-iqbal-fauziah/index.html
@@ -105,7 +105,7 @@
         <div class="hero">
             <img src="img/element/flower.png" alt="" class="m-auto w-[100px] sm:w-[150px]">
             <h4 class="text-white text-center font-semibold text-[16px] sm:text-[25px]">The Wedding Of</h4>
-            <h1 class="text-white align-center text-center font-regular text-[60px] sm:text-[80px] md:text-[100px]" style="font-family: 'Passions Conflict', cursive;">Iqbal Maulana & Nur Fauziah</span></h1>
+            <h1 class="text-white align-center text-center font-regular text-[60px] sm:text-[80px] md:text-[100px]" style="font-family: 'Passions Conflict', cursive;">Iqbal & Fauziah</h1>
             <hr class="m-auto border-[2px] border-[#fff] w-[16%]">
             <p class="text-center text-white font-semibold pt-10">Masih dirahasiakan</p>
         </div>
@@ -142,9 +142,8 @@
             <div class="profiles flex mt-[70px] invisible sm:visible">
                 <div class="profile1 m-auto mr-10">
                     <img src="img/profile/male.png" alt="" class="w-[170px] rounded-full border-[4px] border-red-200">
-                    <h2 class="mt-[20px] mb-[20px] text-gray-600 text-[70px] text-center" style="font-family: 'Passions Conflict', cursive;">Iqbal</h2>
-                    <p  class="text-center font-bold text-lg text-stone-800">Putra</p>
-                    <p class="text-center text-sm text-gray-800">Putri Dari Pasangan
+                    <h2 class="mt-[20px] mb-[20px] text-gray-600 text-[70px] text-center" style="font-family: 'Passions Conflict', cursive;">Iqbal Maulana</h2>
+                    <p class="text-center text-sm text-gray-800">Putra Dari Pasangan
                         <br>
                         <b>Ibu & Bapa</b>
                     </p>
@@ -153,8 +152,7 @@
                 </div>
                 <div class="profile2 m-auto hidden sm:block">
                     <img src="img/profile/female.png" alt="" class="w-[170px] rounded-full border-[4px] border-red-200">
-                    <h2 class="mt-[20px] mb-[20px] text-gray-600 text-[70px] text-center" style="font-family: 'Passions Conflict', cursive;">Fauziah</h2>
-                    <p  class="text-center font-bold text-lg text-stone-800">Putri</p>
+                    <h2 class="mt-[20px] mb-[20px] text-gray-600 text-[70px] text-center" style="font-family: 'Passions Conflict', cursive;">Nur Fauziah</h2> 
                     <p class="text-center text-sm text-gray-800">Putri Dari Pasangan
                         <br>
                         <b>Ibu & Bapa</b>
@@ -164,13 +162,13 @@
                 </div>
             </div>
 
-            <div class="dan m-auto text-center mt-[-375px] font-bold text-[80px] text-stone-800 invisible sm:visible">&</div>
+            <div class="dan m-auto text-center mt-[-375px] font-bold text-[80px] text-stone-800 invisible sm:visible"></div>
 
             <!-- PROFILES 2 -->
             <div class="profiles2 grid mt-[-200px] visible sm:invisible">
                 <div class="profile-1 m-auto">
                     <img src="img/profile/male.png" alt="" class="w-[80%] m-auto rounded-full border-[4px] border-red-200">
-                    <h2 class="mt-[20px] mb-[20px] text-gray-600 text-[70px] text-center" style="font-family: 'Passions Conflict', cursive;">Iqbal</h2>
+                    <h2 class="mt-[20px] mb-[20px] text-gray-600 text-[70px] text-center" style="font-family: 'Passions Conflict', cursive;">Iqbal Maulana</h2>
                     <p  class="text-center font-bold text-lg text-stone-800">Putra</p>
                     <p class="text-center text-sm text-gray-800">Putra Dari Pasangan
                         <br>
@@ -180,11 +178,11 @@
                     <p class="text-center text-sm text-gray-800">Tangerang</p>
                 </div>
 
-                <div class="dan2 m-auto text-center mt-[50px] font-bold text-[80px] text-stone-800 visible sm:invisible">&</div>
+                <div class="dan2 m-auto text-center mt-[50px] font-bold text-[80px] text-stone-800 visible sm:invisible"></div>
 
                 <div class="profile-2 m-auto mt-[50px]">
                     <img src="img/profile/female.png" alt="" class="w-[80%] m-auto rounded-full border-[4px] border-red-200">
-                    <h2 class="mt-[20px] mb-[20px] text-gray-600 text-[70px] text-center" style="font-family: 'Passions Conflict', cursive;">Fauziah</h2>
+                    <h2 class="mt-[20px] mb-[20px] text-gray-600 text-[70px] text-center" style="font-family: 'Passions Conflict', cursive;">Nur Fauziah</h2>
                     <p  class="text-center font-bold text-lg text-stone-800">Putri</p>
                     <p class="text-center text-sm text-gray-800">Putri Dari Pasangan
                         <br>
