--- a/dev/udangan-nikah-iqbal-fauziah/index.html
+++ b/dev/udangan-nikah-iqbal-fauziah/index.html
@@ -373,7 +373,7 @@
 		<section id="guestbook" class="m-auto h-[900px]">
 			<img src="img/element/flower2.png" alt="" class="sm:w-[300px] w-[80%] pt-[50px] flower5 m-auto" />
 			<h1 class="title5 text-[50px] text-center mt-[-5px]" style="font-family: 'Passions Conflict', cursive">GuestBooks</h1>
-			<div class="book m-auto bg-white w-[95%] sm:w-[75%] md:w-[70%] lg:w-[50%] xl:w-[47%] h-[58%] rounded-2xl border-[1.5px] border-red-400 overflow-hidden">
+			<!-- <div class="book m-auto bg-white w-[95%] h-[70%] rounded-2xl border-[1.5px] border-red-400 overflow-hidden"> -->
 				<div class="commentbox">
 					<div class="comment-form">
 						<input type="text" id="name" placeholder="Your Name" required />
