perbaikan bug pada komentar

--- a/dev/udangan-nikah-iqbal-fauziah/index.html
+++ b/dev/udangan-nikah-iqbal-fauziah/index.html
@@ -373,20 +373,20 @@
 		<section id="guestbook" class="m-auto h-[900px]" style="margin-bottom: 100px">
 			<img src="img/element/flower2.png" alt="" class="sm:w-[300px] w-[80%] pt-[50px] flower5 m-auto" />
 			<h1 class="title5 text-[50px] text-center mt-[-5px]" style="font-family: 'Passions Conflict', cursive">GuestBooks</h1>
-			<!-- <div class="book m-auto bg-white w-[95%] h-[70%] rounded-2xl border-[1.5px] border-red-400 overflow-hidden"> -->
-			<div class="commentbox">
-				<div class="comment-form">
-					<input type="text" id="name" placeholder="Your Name" required />
-					<textarea id="comment" rows="4" placeholder="Your Comment" required></textarea>
-					<button onclick="addComment()">Add Comment</button>
-					<div id="error-message" class="error-message"></div>
-				</div>
+			<div class="book m-auto bg-white w-[95%] h-[84%] rounded-2xl border-[1.5px] border-red-400 overflow-hidden">
+				<div class="commentbox">
+					<div class="comment-form">
+						<input type="text" id="name" placeholder="Your Name" required />
+						<textarea id="comment" rows="4" placeholder="Your Comment" required></textarea>
+						<button onclick="addComment()">Add Comment</button>
+						<div id="error-message" class="error-message"></div>
+					</div>
 
-				<div id="comment-list" class="comment-list">
-					<!-- Comments will be dynamically injected here -->
+					<div id="comment-list" class="comment-list">
+						<!-- Comments will be dynamically injected here -->
+					</div>
 				</div>
 			</div>
-			<!-- </div> -->
 		</section>
 		<!-- /GUESTBOOK -->
 
