--- a/dev/cashflow/index.html
+++ b/dev/cashflow/index.html
@@ -25,6 +25,9 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
+
+    <!-- Costum JS -->
+    <script src="js/scrap.js"></script>
   </head>
 
   <body id="page-top">
@@ -423,7 +426,6 @@
                     </div>
                   </div>
                 </div>
-                <script src="js/scrap.js"></script>
 
                 <!-- Card 2 -->
                 <div class="col-lg-6 mb-4">
