penyesuaian method payment di cfout

--- a/dev/cashflow/CFOut.html
+++ b/dev/cashflow/CFOut.html
@@ -514,20 +514,11 @@
                           <option value="" selected disabled>
                             Select a payment method
                           </option>
-                          <option value="gaji">Gaji</option>
-                          <option value="pendapatan_usaha">
-                            Pendapatan Usaha
-                          </option>
-                          <option value="investasi">Investasi</option>
-                          <option value="hadiah">Hadiah</option>
-                          <option value="pengembalian_pajak">
-                            Pengembalian Pajak
-                          </option>
-                          <option value="sumber_lain">Sumber Lain</option>
-                          <option value="bonus_insentif">
-                            Bonus dan Insentif
-                          </option>
-                          <option value="komisi">Komisi</option>
+                          <option value="Cash">Cash</option>
+                          <option value="Credit Card">Credit Card</option>
+                          <option value="Bank Transfer">Bank Transfer</option>
+                          <option value="QR">QR</option>
+                          <option value="E-Wallet">E-Wallet</option>
                         </select>
                       </div>
                     </div>
