--- a/dev/myloc/index.html
+++ b/dev/myloc/index.html
@@ -3,22 +3,25 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Geolocation Example</title>
+		<title>Geocoding with Device Location</title>
 	</head>
 	<body>
-		<h1>Get Geolocation with GPS</h1>
+		<h1>Geocoding with Device Location</h1>
 
 		<button id="get-location">Get My Location</button>
 
-		<h2>Device Location</h2>
+		<h2>Location Information</h2>
 		<p id="location-info"></p>
+
+		<h2>Geocoding Results</h2>
+		<p id="geocode-results"></p>
 
 		<script>
 			document.getElementById('get-location').addEventListener('click', () => {
 				if (navigator.geolocation) {
 					navigator.geolocation.getCurrentPosition(success, error, {
 						enableHighAccuracy: true, // Minta akurasi tinggi
-						timeout: 5000, // Waktu maksimum menunggu hasil (ms)
+						timeout: 10000, // Waktu maksimum menunggu hasil (ms)
 						maximumAge: 0, // Jangan gunakan data lokasi yang sudah ada
 					});
 				} else {
@@ -29,17 +32,42 @@
 			function success(position) {
 				const latitude = position.coords.latitude;
 				const longitude = position.coords.longitude;
-				const accuracy = position.coords.accuracy;
 
 				document.getElementById('location-info').innerHTML = `
                 <strong>Latitude:</strong> ${latitude} <br>
-                <strong>Longitude:</strong> ${longitude} <br>
-                <strong>Accuracy:</strong> ${accuracy} meters
+                <strong>Longitude:</strong> ${longitude}
             `;
+
+				// Perform geocoding
+				geocodeLocation(latitude, longitude);
 			}
 
-			function error(err) {
-				document.getElementById('location-info').textContent = `Error: ${err.message}`;
+			function error() {
+				document.getElementById('location-info').textContent = 'Unable to retrieve your location.';
+			}
+
+			async function geocodeLocation(lat, lon) {
+				const url = `https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`;
+
+				try {
+					const response = await fetch(url, {
+						headers: {
+							'User-Agent': 'YourAppName/1.0 (your-email@example.com)',
+						},
+					});
+					const data = await response.json();
+
+					if (data) {
+						document.getElementById('geocode-results').innerHTML = `
+                        <strong>Address:</strong> ${data.display_name}
+                    `;
+					} else {
+						document.getElementById('geocode-results').innerHTML = 'No results found.';
+					}
+				} catch (error) {
+					console.error('Error:', error);
+					document.getElementById('geocode-results').innerHTML = 'An error occurred.';
+				}
 			}
 		</script>
 	</body>
