--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -142,17 +142,17 @@
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
 				</div>
 				<div class="galeri-body row" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-					<div class="col-6 p-2">
-						<img src="assets/galeri/gal1.jpg" alt="Galeri1" class="img-fluid" />
+					<div class="col-6">
+						<img src="assets/galeri/gal1.jpg" alt="Galeri1" class="img-thumbnail" />
 					</div>
-					<div class="col-6 p-2">
-						<img src="assets/galeri/gal2.jpg" alt="Galeri2" class="img-fluid" />
+					<div class="col-6">
+						<img src="assets/galeri/gal2.jpg" alt="Galeri2" class="img-thumbnail" />
 					</div>
-					<div class="col-6 p-2">
-						<img src="assets/galeri/gal3.jpg" alt="Galeri3" class="img-fluid" />
+					<div class="col-6">
+						<img src="assets/galeri/gal3.jpg" alt="Galeri3" class="img-thumbnail" />
 					</div>
-					<div class="col-6 p-2">
-						<img src="assets/galeri/gal4.jpg" alt="Galeri4" class="img-fluid" />
+					<div class="col-6">
+						<img src="assets/galeri/gal4.jpg" alt="Galeri4" class="img-thumbnail" />
 					</div>
 				</div>
 				<div class="col-12 p-0 galeri-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
