--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -201,71 +201,21 @@
 			</div>
 			<div class="rsvp-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 				<h3>Kirim Ucapan</h3>
-				<div id="commentSection">
+				<div id="commentSection"></div>
+				<!-- Kontainer untuk Nama dan Komentar -->
 
-				</div>
 				<script>
-					// Data dummy komentar
-					const dummyComments = [
-						{ name: 'Andi', comment: 'Ini adalah komentar pertama!' },
-						{ name: 'Siti', comment: 'Komentar kedua di sini, semoga bermanfaat!' },
-						{ name: 'Budi', comment: 'Wah, artikel ini sangat menarik!' },
-						{ name: 'Rina', comment: 'Terima kasih sudah berbagi informasi yang berguna!' },
-						{ name: 'Dani', comment: 'Saya setuju dengan pendapat Anda.' },
-						{ name: 'Tina', comment: 'Komentar ini agak panjang, tapi tetap mudah dimengerti.' },
-						{ name: 'Joko', comment: 'Komentar panjang lagi, semoga tidak ada masalah dengan panjang komentar ini.' },
-					];
 
-					// Menampilkan komentar dummy pada halaman
-					dummyComments.forEach((commentData) => {
-						const commentDiv = document.createElement('div');
-						commentDiv.classList.add('card', 'mb-1');
-
-						commentDiv.innerHTML = `
-								<div class="card-body">
-									<h5 class="card-title">${commentData.name}</h5>
-									<p class="card-text">${commentData.comment}</p>
-								</div>
-							`;
-
-						document.getElementById('commentSection').appendChild(commentDiv);
-					});
-
-					// Event listener untuk form submit
-					document.getElementById('commentForm').addEventListener('submit', function (event) {
-						event.preventDefault(); // Mencegah reload halaman saat form disubmit
-
-						// Mengambil nilai dari input
-						const name = document.getElementById('name').value;
-						const comment = document.getElementById('comment').value;
-
-						if (name && comment) {
-							// Membuat elemen komentar baru
-							const commentDiv = document.createElement('div');
-							commentDiv.classList.add('card', 'mb-3');
-
-							commentDiv.innerHTML = `
-									<div class="card-body">
-										<h5 class="card-title">${name}</h5>
-										<p class="card-text">${comment}</p>
-									</div>
-								`;
-
-							// Menambahkan komentar ke dalam section
-							document.getElementById('commentSection').appendChild(commentDiv);
-
-							// Reset form setelah submit
-							document.getElementById('commentForm').reset();
-						} else {
-							alert('Nama dan komentar harus diisi!');
-						}
-					});
 				</script>
+
+
+
+
 			</div>
-			<div class="col-12 p-0 rsvp-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear"
+			<!-- <div class="col-12 p-0 rsvp-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear"
 				data-aos-duration="1000">
 				<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<div id="hadiah" class="hadiah">
