upgrade view comment box

--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- other js -->
+		<script src="https://unpkg.com/stein-js-client"></script>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -186,6 +188,7 @@
 				<div class="rsvp-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<h3>Kirim Ucapan</h3>
 					<div id="commentSection"></div>
+
 					<button type="button" class="btn btn-outline-light m-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Kirim Ucapan</button>
 
 					<!-- Modal -->
