change color cover

--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -35,7 +35,7 @@
 				<div class="cover-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<h4>Cover</h4>
 					<p>Cover Undangan</p>
-					<a class="btn btn-outline-dark alamat-btn" href="#salam" role="button" id="openButton">Open</a>
+					<a class="btn btn-outline-light alamat-btn" href="#salam" role="button" id="openButton">Open</a>
 				</div>
 
 				<div class="col-12 p-0 cover-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
