add cover,upgrade comment, add scroll

--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -20,31 +20,36 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
 
+		<!-- tes  -->
+
 		<!-- ADD CSS -->
 		<link rel="stylesheet" href="assets/css/style.css" />
+
 		<title>Hello, world!</title>
 	</head>
 
 	<body>
-		<!-- HTML: Elemen yang sudah ada -->
-		<div id="cover" class="cover">
+		<section id="cover" class="cover">
 			<div class="row p-0 m-0 cover-content text-center">
 				<div class="col-12 p-0 cover-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
 				</div>
 				<div class="cover-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-					<h4>Cover</h4>
-					<p>Cover Undangan</p>
-					<a class="btn btn-outline-light alamat-btn" href="#salam" role="button" id="openButton">Open</a>
+					<h6>THE WEDDING OF</h6>
+					<h3>Iqbal & Fauziah</h3>
+					<br /><br /><br /><br /><br /><br />
+					<p>KEPADA YTH</p>
+					<h6>TAMU UNDANGAN</h6>
+					<a class="btn btn-outline-light alamat-btn" href="#salam" role="button" id="openButton"><i class="bi bi-envelope-open-heart"></i> OPEN INVITATION</a>
 				</div>
 
 				<div class="col-12 p-0 cover-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
+		</section>
 
-		<div id="salam" class="salam" style="display: none">
+		<section id="salam" class="salam" style="display: none">
 			<div class="row p-0 m-0 salam-content text-center">
 				<div class="col-12 p-0 salam-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
@@ -57,9 +62,9 @@
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
+		</section>
 
-		<div id="quote" class="quote">
+		<section id="quote" class="quote">
 			<div class="row p-0 m-0 quote-content text-center">
 				<div class="col-12 p-0 quote-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
@@ -72,15 +77,16 @@
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
-		<div id="mempelai" class="mempelai">
+		</section>
+
+		<section id="mempelai" class="mempelai">
 			<div class="row p-0 m-0 mempelai-content text-center">
 				<div class="col-12 p-0 mempelai-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
 				</div>
 				<div class="mempelai-body gap-5" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<div class="mempelai-1" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-						<img src="assets/img/team-1.jpg" class="card-img-top" style="border-radius: 50%; width: 40%" alt="..." />
+						<img src="assets/img/pria.jpg" class="card-img-top" style="border-radius: 50%; width: 40%" alt="..." />
 						<h5 class="card-title">Iqbal Maulana</h5>
 						<p class="card-text">Putra kedua dari Bapak Usman dan Ibu Nurlaeli Khoderiah</p>
 					</div>
@@ -95,9 +101,9 @@
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
+		</section>
 
-		<div id="acara" class="acara">
+		<section id="acara" class="acara">
 			<div class="row p-0 m-0 acara-content text-center">
 				<div class="col-12 p-0 acara-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
@@ -132,9 +138,9 @@
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
+		</section>
 
-		<div id="alamat" class="alamat">
+		<section id="alamat" class="alamat">
 			<div class="row p-0 m-0 alamat-content text-center">
 				<div class="col-12 p-0 alamat-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
@@ -155,9 +161,9 @@
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
+		</section>
 
-		<div id="galeri" class="galeri">
+		<section id="galeri" class="galeri">
 			<div class="row p-0 m-0 galeri-content text-center">
 				<div class="col-12 p-0 galeri-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
@@ -180,9 +186,9 @@
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
+		</section>
 
-		<div id="doa" class="doa">
+		<section id="doa" class="doa">
 			<div class="row p-0 m-0 doa-content text-center">
 				<div class="col-12 p-0 doa-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
@@ -195,8 +201,8 @@
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
-		<div id="rsvp" class="rsvp">
+		</section>
+		<section id="rsvp" class="rsvp">
 			<div class="row p-0 m-0 rsvp-content text-center">
 				<div class="col-12 p-0 rsvp-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
@@ -205,18 +211,13 @@
 					<h3>Kirim Ucapan</h3>
 					<div id="commentSection"></div>
 
-					<button type="button" class="btn btn-outline-light m-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Kirim Ucapan</button>
+					<button type="button" class="btn btn-outline-light m-2" data-bs-toggle="modal" data-bs-target="#kirimUcapan">Kirim Ucapan</button>
 
 					<!-- Modal -->
-					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal fade" id="kirimUcapan" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<div class="modal-header">
-									<h1 class="modal-title fs-5" id="exampleModalLabel">Kirim Ucapan</h1>
-									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-								</div>
 								<div class="modal-body">
-									<h2 class="text-center">Submit Comment</h2>
 									<form id="commentForm">
 										<!-- Name Input -->
 										<div class="mb-3">
@@ -237,22 +238,13 @@
 									<!-- Error or Success Message -->
 									<div class="message" id="error-message"></div>
 								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Save changes</button>
-								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<!-- <div class="col-12 p-0 rsvp-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear"
-				data-aos-duration="1000">
-				<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
-			</div> -->
 			</div>
-		</div>
-		<div id="hadiah" class="hadiah">
+		</section>
+		<section id="hadiah" class="hadiah">
 			<div class="row p-0 m-0 hadiah-content text-center">
 				<div class="col-12 p-0 rsvp-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
@@ -311,7 +303,8 @@
 					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
 				</div>
 			</div>
-		</div>
+		</section>
+
 		<!-- Jquery -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
