--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -209,7 +209,7 @@
 				</div>
 				<div class="rsvp-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<h3>Kirim Ucapan</h3>
-					<div id="commentSection"></div>
+					<!-- <div id="commentSection"></div> -->
 
 					<button type="button" class="btn btn-outline-light m-2" data-bs-toggle="modal" data-bs-target="#kirimUcapan">Kirim Ucapan</button>
 
