add pict wanita

--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -92,7 +92,7 @@
 					</div>
 					<br />
 					<div class="mempelai-2" style="z-index: 2" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
-						<img src="assets/img/team-1.jpg" class="card-img-top" style="border-radius: 50%; width: 40%" alt="..." />
+						<img src="assets/img/wanita.jpg" class="card-img-top" style="border-radius: 50%; width: 40%" alt="..." />
 						<h5 class="card-title">Nur Fauziah</h5>
 						<p class="card-text">Putri kedua dari Bapak Rusnadi(alm) dan Ibu Nur Asiah</p>
 					</div>
@@ -267,14 +267,14 @@
 								<div class="modal-body">
 									<h5>BCA - Iqbal Maulana</h5>
 									<p id="text-to-copy-1">
-										123456
+										8015461523
 										<button class="btn btn-outline-primary" onclick="copyText('text-to-copy-1')">
 											<i class="bi bi-clipboard"></i>
 										</button>
 									</p>
 									<h5>BCA - Nur Fauziah</h5>
 									<p id="text-to-copy-2">
-										654321
+										7610908602
 										<button class="btn btn-outline-primary" onclick="copyText('text-to-copy-2')">
 											<i class="bi bi-clipboard"></i>
 										</button>
